Fix work content vertical alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -249,11 +249,12 @@ a:hover {
   display: flex;
   text-align: left;
   margin-bottom: 298px;
+  align-items: flex-end;
 
   h4 {
     line-height: 140%;
     max-width: 400px;
-    margin-bottom: 30px;
+    margin-bottom: 0;
   }
 }
 
@@ -272,13 +273,13 @@ a:hover {
 
   a::after {
     @extend .highlight-drop;
-    height: 5%;
-    top: 23%;
+    height: 10%;
+    top: 50%;
   }
 
   a:hover::after {
     @extend .highlight-drop;
-    top: 23%;
+    top: 50%;
   }
 }
 
@@ -287,7 +288,6 @@ a:hover {
 }
 
 .workPanel .image {
-  height: 400px;
   max-width: 653px;
 }
 
